Fix party by IAE action

--- a/view/party_iae_tree.xml
+++ b/view/party_iae_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="IAE">
+<tree string="IAE" keyword_open="1">
     <field name="rec_name" expand="1"/>
     <field name="parent" tree_invisible="1"/>
     <field name="childs" tree_invisible="1"/>
