--- a/view/party_iae_list.xml
+++ b/view/party_iae_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="IAE">
+<tree>
     <field name="full_name" expand="1"/>
     <field name="section" tree_invisible="1"/>
     <field name="division" tree_invisible="1"/>
